Added JDK 12 switch statement syntax